# Hinton

./: .gitignore  Cargo.toml  Hinton.java  Hinton.sh  Main.java  Module & OOP.hint  Module & OOP.ht  README.md  Untitled.code-workspace  Variables & Datatypes.ht  arrays.hint  arrays.ht  decorators.hint  for loops.hint  for loops.ht  functions.hint  grammar.bnf  grammar.cfg  input & output.hint  keywords.md  operators & logic flow.hint  package.hb  package.hint  rustfmt.toml  symple_nn.hint  symple_nn.ht  test.ht  test_file.ht  the standard library.ht
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: rust.yml
AbstractSyntaxTree/: AST.java  Assignment.java  BinaryOperator.java  BoolLiteral.java  Compound.java  ConstDeclaration.java  FuncDeclaration.java  Identifier.java  IntLiteral.java  NoOp.java  Program.java  ReAssignment.java  RealLiteral.java  StringLiteral.java  TypeDef.java  UnaryOperator.java  VarDeclaration.java
Analysers/: Resolver.java
Analyzers/: Cargo.toml  README.md  Resolver.java
CLI/: ProcessArgs.java
Compiler/: Cargo.toml  README.md
Compiler/src/: lib.rs  (+1 more)
Core/: Cargo.toml  README.md
Design/: Logo-and-info.xd
Envornment/: DecType.java  Environment.java  FunctionType.java  Symbol.java  Value.java
Errors/: IllegalTokenError.java  ParseError.java  ParserError.java  RuntimeError.java  UnexpectedTokenError.java
Grammar/: diagram.xhtml  grammar.bnf
Helper/: Helper.java  PrintAST.java  Regex.java
Hinton/: Cargo.toml  README.md
Hinton/src/: main.rs
Interpreter/: Break.java  ClassMember.java  Continue.java  EvalBinaryExpr.java  EvalUnaryExpr.java  HintonCallable.java  HintonClass.java  HintonFunction.java  HintonInstance.java  HintonInstantiable.java  HintonLambda.java  Interpreter.java  NativeType.java  Return.java
Lexer/: Cargo.toml  Lexer.java  LogicalOrBitwiseOperator.java  README.md
Objects/: Cargo.toml  README.md
PLV/: Cargo.toml  README.md
PLV/src/: disassembler.rs  lib.rs  visitor.rs
Parser/: Cargo.toml  InferType.java  Parser.java  README.md
RuntimeLib/: README.md  RuntimeLib.java
Symbols/: AssignmentType.java  BuiltInTypes.java
Tokens/: README.md  Token.java  TokenType.java
VirtualMachine/: Cargo.toml  README.md
VirtualMachine/src/: lib.rs  run.rs
_LanguageDesign/: Module & OOP.ht  Variables & Datatypes.ht  arrays.ht  functions.ht  hinton-development.code-workspace  looping.ht  package.yml  the standard library.ht
_grammar/: grammar.txt
docs/: Numbers.md  README.md  TheStandardLibrary.md  keywords.md  sets.md
lexer/: Cargo.toml
parser/: Cargo.toml
plv/: Cargo.toml
src/: analyzer.rs  ast.rs  bytecode.rs  chunk.rs  errors.rs  main.rs  natives.rs  objects.rs  plv.rs
test/: benchmark.ht  functions.ht  literals.ht  var&const.ht
(+209 files in other folders)
