# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["Core", "PLV", "Lexer", "Parser", "Analyzers"]

[features]
PLV = []

[package]
name = "hinton"
version = "0.1.0"
authors = ["Fausto German <fgermanj@gmail.com>"]
edition = "2021"

[dependencies]
core = { path = "Core" }
plv = { path = "PLV" }
lexer = { path = "Lexer" }
parser = { path = "Parser" }
analyzers = { path = "Analyzers" }
num-derive = "0.3"
num-traits = "0.2"
hashbrown = "0.12.3"
rand = "0.8.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
