# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["Hinton", "Core", "PLV", "Lexer", "Parser", "Analyzers", "Compiler", "VirtualMachine"]

[profile.release]
lto = "fat"
codegen-units = 1
# Note: Because memory is not freed on abort, this option
# makes the 'leaks' command show memory leakage. Disable
# this option when running the the 'leaks' command.
panic = "abort"
