[package]
name = "hinton"
version = "0.1.0"
authors = ["Fausto German <fgermanj@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../Core" }
virtual_machine = { path = "../VirtualMachine", features=["PLV"]}
